# philips-home-access

./: .gitattributes  .gitignore  LICENSE  README.md  config.example.toml  conftest.py  hacs.json  pyproject.toml  requirements.txt
.github/workflows/: validate.yml
custom_components/philips_home_access/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  lock.py  manifest.json  sensor.py
custom_components/philips_home_access/homeaccess/: __init__.py  __main__.py  api.py  constants.py  crypto.py  realtime.py  session.py  settings.py  state.py  tokens.py  tracker.py  transport.py
custom_components/philips_home_access/translations/: en.json
homeaccess/: __init__.py  api.py  cli.py  constants.py  exceptions.py  models.py  realtime.py  session.py  tokens.py  tracker.py  transport.py
research/: FINDINGS.md
tests/: test_async_io.py  test_crypto.py  test_events.py  test_tokens.py  test_tracker.py
