[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "homeaccess"
version = "0.1.0"
description = "Reverse-engineered client for the Philips Home Access smart-lock cloud API"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "cryptography>=42",
    "websocket-client>=1.8",
    "rich>=13.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
homeaccess = "homeaccess.cli:main"

[tool.setuptools]
packages = ["homeaccess"]
