[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "homeaccess"
version = "0.1.0"
description = "Reverse-engineered client for the Philips Home Access smart-lock cloud API"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "cryptography>=42",
    "rich>=13.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
homeaccess = "homeaccess.cli:run"

[tool.setuptools]
packages = ["homeaccess"]
package-dir = {homeaccess = "custom_components/philips_home_access/homeaccess"}

[tool.pytest.ini_options]
asyncio_mode = "auto"
